packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-05/lodash.js
module.exports = {
  isNil(foo) {
    return foo == null;
  }
}
